﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-05-14 Michal Čihař  <michal@cihar.com>
    * libraries/common.lib.php: Fix reading database list with MySQL wildcards
      (bug #1487613).
    * changelog.php: There is no reason to make bug uppercase.

2006-05-14 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/import.lib.php: bug #1482841, support USE statement in the import file

2006-05-12 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.0.4 released from MAINT_2_8_0

2006-05-12 Michal Čihař  <michal@cihar.com>
    * libraries/footer.inc.php: Escape user input to avoid XSS.
    * libraries/common.lib.php, libraries/url_generating.lib.php: Better
      handle other URL separator than & (bug #1487365).

2006-05-06 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Describe better regullar expressions in hide_db
      (patch #1482049, thanks to Isaac Bennetch - ibennetch).

2006-05-05 Michal Čihař  <michal@cihar.com>
    * libraries/export/sql.php: Fix UPDATE export with extended inserts
      enabled (bug #1482103), fix export type selection.
    * libraries/select_lang.lib.php: Use GET and POST explicitely as cookies
      can override values in REQUEST (bug #1481584).
    * lang/czech: Updated.

2006-05-03 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Document OpenDocument export and various fixes.

2006-05-02 Michal Čihař  <michal@cihar.com>
    * libraries/select_lang.lib.php, libraries/Theme_Manager.class.php: Escape
      user input (CVE-2006-2031).
    * server_databases.php: Fix path to image (needs to be lower case).
    * libraries/common.lib.php: Use htmlspecialchars instead of htmlentities,
      it doesn't break utf-8.

2006-04-28 Michal Čihař  <michal@cihar.com>
    * Documentation.html, main.php, libraries/config.default.php: Possibility
      to hide creating of database from main (RFE #1370100).
    * Documentation.html, main.php, libraries/left_header.inc.php: